[Document] Fix swagger doc with correct list transaction
